codes are improved

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
     <header>
       <nav class="main-nav">
-        <a href="#home">Rockklubben Ytterrock</a>
-        <a href="#admin">Admin</a>
+        <a href="">Rockklubben Ytterrock</a>
+        <a href="#admin">Login</a>
   
       </nav>
     </header>
