did smal changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="main-nav">
-      <a href="#start">Startsida</a>
+      <a href="">Startsida</a>
       <a href="#login">Admin Login</a>
     </nav>
   </header>
