Update event details and fix navigation link

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
   <header>
     <nav class="main-nav">
-      <a href="#start">Startsida</a>
+      <a href="index.html">Startsida</a> <!-- Remove the # from href -->
       <a href="#login">Admin Login</a>
+      
     </nav>
   </header>
   <div>
